src2/objects/NES_StagingTableNotableEvent__c.object
<CustomObject>
    <fields>
        <fullName>Asset_Module__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset Module</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>NES_StagingTableNotableEvents (Asset Module)</relationshipLabel>
        <relationshipName>NES_StagingTableNotableEvents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContractLineItemMirror__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Line Item Mirror Chassis</label>
        <referenceTo>ContractLineItemMirror__c</referenceTo>
        <relationshipLabel>Notable Events</relationshipLabel>
        <relationshipName>Staging_Notable_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContractLineItemModuleMirror__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Line Item Module Mirror</label>
        <referenceTo>ContractLineItemMirror__c</referenceTo>
        <relationshipLabel>NES_StagingTableNotableEvents (Contract Line Item Module Mirror)</relationshipLabel>
        <relationshipName>NES_StagingTableNotableEvents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Line_Item_Module__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Line Item Module</label>
        <referenceTo>ContractLineItem</referenceTo>
        <relationshipLabel>NES_StagingTableNotableEvents (Contract Line Item Module)</relationshipLabel>
        <relationshipName>NES_StagingTableNotableEvents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NES_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Notable Events</relationshipLabel>
        <relationshipName>Staging_Notable_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NES_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Notable Events</relationshipLabel>
        <relationshipName>Staging_Notable_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NES_ContractLineItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Line Item Chassis</label>
        <referenceTo>ContractLineItem</referenceTo>
        <relationshipLabel>Notable Events</relationshipLabel>
        <relationshipName>Staging_Notable_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NES_Date__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <description>Date and time when the event was triggered (may be different than the creation date)</description>
        <label>Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NES_Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NES_EventCode__c</fullName>
        <label>Event Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NES_EventValidity__c</fullName>
        <label>Event Validity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alarm Valid</fullName>
                </value>
                <value>
                    <fullName>Alarm Actionable</fullName>
                </value>
                <value>
                    <fullName>Resolution Mismatch to Alarm</fullName>
                </value>
                <value>
                    <fullName>Alarm Not Actionable</fullName>
                </value>
                <value>
                    <fullName>Alarm Invalid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NES_Event_Log__c</fullName>
        <description>Unique key of the event log record in the staging table</description>
        <label>Event Log</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NES_HandledBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Handled By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Staging_Notable_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NES_HandledDate__c</fullName>
        <description>Date when the status of the Notable event was set to Handled</description>
        <label>Handled Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NES_NoOfTasks__c</fullName>
        <description>Auto-populated Task Counter</description>
        <inlineHelpText>Shows the number of tasks associated to the Notable Event</inlineHelpText>
        <label>No of Tasks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NES_NotableEvent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Notable Event</label>
        <referenceTo>NES_NotableEvent__c</referenceTo>
        <relationshipLabel>Notable Events</relationshipLabel>
        <relationshipName>Staging_Notable_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NES_Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Normal</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NES_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Handled</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NES_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Component Breakdown</fullName>
                </value>
                <value>
                    <fullName>Operational</fullName>
                </value>
                <value>
                    <fullName>Connectivity</fullName>
                </value>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Machine Maintenance</fullName>
                </value>
                <value>
                    <fullName>Backend</fullName>
                </value>
                <value>
                    <fullName>Order</fullName>
                </value>
                <value>
                    <fullName>Config</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Next_Best_Action__c</fullName>
        <description>Next Best Action to be triggered once a Notable Event is raised</description>
        <label>Next Best Action</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NextBestAction</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>NoOfCompletedTasks__c</fullName>
        <label>No of Completed Tasks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <displayFormat>{0000}</displayFormat>
        <label>Sequence</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>UniqueKey__c</fullName>
        <externalId>true</externalId>
        <label>UniqueKey</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>NES_StagingTableNotableEvent</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>NES_EventCode__c</columns>
        <columns>NES_Event_Log__c</columns>
        <columns>Next_Best_Action__c</columns>
        <columns>UniqueKey__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NES_StagingTableNotableEvents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>NES_StatusFromHandledToOpen</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(PRIORVALUE(NES_Status__c), &apos;Handled&apos;) &amp;&amp; ISPICKVAL(NES_Status__c, &apos;Open&apos;)</errorConditionFormula>
        <errorMessage>Once Status has been changed to  &quot;Handled&quot; is cannot be changed back to &quot;Open&quot;.</errorMessage>
    </validationRules>
</CustomObject>